force-app/main/default/objects/Audit_Artifact_Snapshot__c/Audit_Artifact_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Audit Artifact Snapshot</label>
    <pluralLabel>Audit Artifact Snapshots</pluralLabel>
    <nameField><displayFormat>SOURCE-{00000}</displayFormat><label>Source Snapshot Number</label><type>AutoNumber</type></nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>