force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Artifact_Label__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Label__c</fullName>
    <label>Artifact Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>