force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Type__c</fullName>
    <label>Artifact Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>