force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Character_Count__c.field-meta.xml
<CustomField>
    <fullName>Character_Count__c</fullName>
    <label>Full Source Character Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>