force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Status__c</fullName>
    <label>Source Coverage</label>
    <type>Text</type>
    <length>40</length>
</CustomField>