force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Complete Audited Instructions</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>