force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Api_Name__c</fullName>
    <label>Source Api Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>