force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Binding_Verified__c.field-meta.xml
<CustomField>
    <fullName>Source_Binding_Verified__c</fullName>
    <label>Source Binding Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>