force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Hash__c</fullName>
    <label>Source SHA256</label>
    <type>Text</type>
    <length>64</length>
</CustomField>