force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Json__c.field-meta.xml
<CustomField>
    <fullName>Source_Json__c</fullName>
    <label>Lossless Source JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>JSON string encoding preserves source whitespace that Salesforce text storage may trim. Decoded text must match the stored source hash.</description>
</CustomField>