force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Kind__c.field-meta.xml
<CustomField>
    <fullName>Source_Kind__c</fullName>
    <label>Source Provenance</label>
    <type>Text</type>
    <length>100</length>
</CustomField>