force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_Path__c</fullName>
    <label>Source Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>