force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Retrieved_At__c.field-meta.xml
<CustomField>
    <fullName>Source_Retrieved_At__c</fullName>
    <label>Source Retrieved At</label>
    <type>DateTime</type>
</CustomField>