force-app/main/default/objects/Audit_Artifact_Snapshot__c/fields/Source_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_Version__c</fullName>
    <label>Source Version</label>
    <type>Text</type>
    <length>255</length>
</CustomField>